--- a/WindowsFormsApplication1/UcMindMap.resx
+++ b/WindowsFormsApplication1/UcMindMap.resx
@@ -117,10 +117,111 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="toolStripButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFTSURBVDhPzZC/TsMwEMbzCLwBmTu02RHUGwyVkrEMVTN2
+        q7dmc0a2ZOwWb80WiwW2emVq3qB+g9wbHD7HiFaUUgYkftIp1l2+7/4Ef0rx0qWFAi1fwVQadLOFstl2
+        oS+fh4SlArRfI+o+yEhpgJMmZQ1YvXURvYsGJIlnJQDjLbKFwsFMwU1mQD4DWBPjRB9Yx6vcGkgNrdh0
+        OYnT0iDj2oo1DudK3y6VYanE5Mn9d2xA8LVBvgbk0ndOFVKM5g2neiyacDCVbgqxAe1Eh1DHJKfOvcnw
+        oVBWzHzZQdN8a5DkBiPem9AkZCiq7ovBRFiDGpRPfcIy2pkOpjGyo0dTG0mJvhzYaUKq0Q2W671b6yx0
+        WP90XN8XjJrQij71O+4WuqXusdj93P2QedGF4+UuJfEka8GnLyde7RmJk6zF0WOT+PTl2AnS8WqX2yMe
+        3eS/EATvZFDxxKT226kAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="toolStripButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFjSURBVDhPzZKxbsIwEIZ5BB6gKsxIheyoJUtbhohkZKFk
+        ZCLZms3dyuaM2eKt3WJ1ohNeO5E3wG/gewPXZ9wWRGmF1KGf5OXs/7//Lmn8GdVKtasV5KUAwZYgaaVi
+        Uqqmu/4ZFHMBgELyvHMYgDGJ3bPjGLFkLwD9TEJnwsGfcd2fC5jkAHNjkpQqwnflm/L8tNZWtAszBtEC
+        tDdm+jLhsjvlAo28mOs4B31XgDQmsXlX+zOhTeL90cgTCOx+dk1lSKo21nrTKu2MGXgR06NHkCkDnRam
+        iTG1ol0+DM5vqHAlizHxu0PKUYxJoodtSnf9hVkYDwjAhUngShb6qrx8ue1sxanUXpQfGiTFJt3ugOvW
+        gHzOhwvDmTE2dkZxe/iNAYIR/Uzq1i31XclysLBjhGRtU1zNRO1KpxNkNaDJIFnHU6rs1ziJXlg2R5ms
+        gwVAeL/ZG+UkQqIik+D3X/gf0Gi8A3LB5jWbm8U8AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="toolStripButton5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADoSURBVDhPYxgcIHv+44KpO189ANFQIdIASPPW8x//g2gQ
+        v7y8PBuI/5eUlPwvKCj4n52d/T81NfV/QkLC/8jIyP/BwcH/wRphgGIXDDxImfGwoH3DywchXXfI80Lb
+        +ucPlh55+7906SNwIMbExGRHRET8DwwM/O/l5fXf2dn5v42NzX8TE5P/urq6/9XU1FAD0b/jVkHJgkcP
+        XCquDdVAtM2/WBA37eYD69yL5HkBpLl/28v/IBrENzIyytbW1v6voqLyX05O7r+4uPh/ISGh/zw8PP/Z
+        2dn/MzMzowYiyGaKXEA+YGAAAOeodDuitMOuAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="toolStripButton4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADzSURBVDhPY6AKyJr9SGXR4Xf/oVzSAUgzRQaAALIB5eXl
+        2UD8v6Sk5H9BQcH/7Ozs/6mpqf8TEhL+R0ZG/g8ODka1DOaCRQcpdAXZYO7+t/9n7Xn9P6T3tgpUiHQA
+        0ty75SV5Xghpu63Suek5XHNMTEx2RETE/8DAwP9eXl7/nZ2d/9vY2Pw3MTH5r6ur+19NTQ3Vorb1z/83
+        rnn6v2bV0wEKxPJlj/+XLn38v3jxY/JdANJsUXiF/FgAaYa5wMjIKFtbW/u/iorKfzk5uf/i4uL/hYSE
+        /vPw8PxnZ2f/z8zMjOpSkEYQti263AEVohdgYAAA22181PDz9hkAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="toolStripButton7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAE7SURBVDhP3ZExioNQEIbtBLHQRgtFt0gCKcQiBiwMJCZE
+        AtEUWmgVA4mgpBAJpHxH8AgeIUfwCB4hR8gRZp/hISwb7Xc/mOZn/pn536P+Gff7PcbV3G43yPP8lWUZ
+        Op/PjziOX2EYVofDgSOt/RRFgdI0BVw1kajWHAQBOI7TEKmf6/WKLpcLnE6nboDneQgXrFYrIFI/SZKg
+        4/EIURS9B7Rnr9fr53a7BdM0q3fTEDgvwmbwff+53++RbdvNZrOB+XzeXTQIzouwGXa7XWeYzWYV3g6T
+        yaRRVXX4Idu8ruu2ebsBuq5z2AyapoEgCDmRP4OzIpL3x8myLMN0OgWO4xCRPmNZFloul+227sskScpH
+        oxEwDPOiafqLyL9ZLBaxYRgPbK7H43GtKEopimLJ83zNsmw5aP6rUNQ3ZN1o8NOzto4AAAAASUVORK5C
+        YII=
+</value>
+  </data>
+  <data name="toolStripButton6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACySURBVDhPYxjmIDs7uyEhIeEDEP+PjIz8EBQUdAAqRTyI
+        i4t7ANT839/fPwEqRDyIiooyCA8P/+/j4/MBKkQaCA4OngB09n83N7cFUCHSANDmB56env9tbGwCoELE
+        Ay8vLwNXV9f/1tbW5Dnf0dFxgouLy39DQ0PynG9qavrAwsLiv6amJunONzc3dwAa8F9DQ+M/VIh4YGxs
+        3KCrq3tATU3tgJyc3AEJCYkNUKnhCRgYABv6M/jR0U8RAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="toolStripButton9.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAEJSURBVDhPYxhcoLy8PAGI3wPx/9LS0n6oMBgkJiauj46O
+        /h8SElIAFcIOgBr3l5SU/Idy4SA+Pl4gKCjoPJSLGxQWFu7Py8vDMAAEPD0990OZuEFubu7+jIwMrAY4
+        OjoSNiA1NXU/0L9YDbCwsCBsQEJCwv7IyEisBujq6hI2ICIiYn9gYCBWA1RVVQkb4Ofn1+/t7f3f3t4+
+        ACoEBsrKyg5ycnIoUYsVuLu7K1hZWb03Nzc/r6+vrwASA2mWkZE5Ly4uDuYTBEDNCnp6evM1NDT2Kyoq
+        7peSkuoXFRU1gErTGGhra/9XUVH5D/Tvf6CT/wsJCf3n4eH5z87O/p+ZmRlr4A4kYGAAABJGTNEaOXIt
+        AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="toolStripButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAEuSURBVDhP1VFBasMwEMwPqnMOlc+GyrrVJBDpVEwptm82
+        hdS+5Vb7B+qxN/kH0g/iJ/gH9RP6BP9gqw1qIDTUCT11YJB2tTs7rBa/IWv2Mm36wYfXo30fIG97UOYj
+        96nL4aYTbEaut3by6cshdnsrKmNlbYHnHUSZvs4FTnUChJV6RIG7VH/6p3mInak3L3bEe1QYycvu24U8
+        FMwBm8Wz4T5chGU3oQB7UPM/4mwHsrTAUj2yRI14hk9OIHmDIG6B3jeBLz2PTWV6VuiBioY7ykgoGT0q
+        fhCQLdzGTe9LfwKXhnZdE/GpI6hQHTpYxq/nv1QUOmCZ7sNETevytMg5qYO4PjhALuPtREV1OsRtmKBV
+        unLWV9VxgQgnQDBHw4zfONII6QUgJ/AX/nsBAl/dihDIZM6cpgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="toolStripButton8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAEaSURBVDhPrY+hUsQwFEX7CStx9A+IA7eRKyPXbR24zR80
+        jg6mcdQ1bus2DlwjkZG4rVxH/+Dyku0Aw5RpF7gzdzp9fefe1+Q3avcl9660b8daDKP52u9yZSuJ/mjQ
+        e4FhPE/fYa+T+QH1Y55+ha1aQK4X0wH104Fr20E3HaxRBEu4Ionw8vqKD2vjKpuDCKDzgH9FDNFKRnhz
+        u1HD2s8KQAAd2ThANT2yCki5mj59e99yVflTswUyDYiiB79z0wHbh5ZJ7WHpdPNCoOrApQPPLNKVxuUy
+        /zyfrR2CQ3J4D82y8PTfPfQzNRcE0zcmTGwmOIvgh24sktUJDq2CmpjQYNQUnqFxAGXc/39dAH/y6PAc
+        jw7P8ehwtoF3UKtSk81dm2wAAAAASUVORK5CYII=
+</value>
+  </data>
   <metadata name="toolStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>127, 17</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="toolBtnAddImage.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
@@ -156,107 +257,11 @@
         AElFTkSuQmCC
 </value>
   </data>
-  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <data name="toolStripButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="toolBtnRelate.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFVSURBVDhPzZA9TsNAEIV9BG6ADxAlPgCQ7aCIZJehiOIy
-        XbaLu3VJZ5fpvF3ceQsk6LItVXyD7A08Nxh21otIRAihQOKTRl7N+L35Cf6U4qVLCwVavoKpNOhmC2Wz
-        7UJfPg8JSwVov0bUfZCR0gAnTcoasHrrInoXDUgSz0oAxltkC4WDmYKbzIB8BrAmxok+sI5XuTWQGlqx
-        6XISp6VBxrUVaxzOlb5dKsNSicmT++/YgOBrg3wNyKXvnCqkGM0bTvVYNOFgKt0UYgPaiQ6hjklOnXuT
-        4UOhrJj5soOm+dYgyQ1GvDehSchQVN0Xg4mwBjUon/qEZbQzHUxjZEePpjaSEn05sNOEVKMbLNd7t9ZZ
-        6LD+6bi+Lxg1oRV96nfcLXRL3WOx+7n7IfOiC8fLXUriSdaCT19OvNozEidZi6PHJvHpy7ETpOPVLrdH
-        PLrJfyEI3gF+HfHNI33JQQAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="toolStripButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFjSURBVDhPzZIxUsJAFIY5AgdwhAMg5AAoaVSKDElJg6Sk
-        IulMt3bSbcp02U67bGGBFdtakRuwN9h3g3XfsioMosOMhd/MNm/3/9//XtL4M6qValcryEsBgi1B0krF
-        pFRNd/0zKOYCAIXkeecwAGMSu2fHMWLJXgD6mYTOhIM/47o/FzDJAebGJClVhO/KN+X5aa2taBdmDKIF
-        aG/M9GXCZXfKBRp5MddxDvquAGlMYvOu9mdCm8T7o5EnENj97JrKkFRtrPWmVdoZM/AipkePIFMGOi1M
-        E2NqRbt8GJzfUOFKFmPid4eUoxiTRA/blO76C7MwHhCAC5PAlSz0VXn5ctvZilOpvSg/NEiKTbrdAdet
-        AfmcDxeGM2Ns7Izi9vAbAwQj+pnUrVvqu5LlYGHHCMnapriaidqVTifIakCTQbKOp1TZr3ESvbBsjjJZ
-        BwuA8H6zN8pJhERFJsHvv/A/oNF4B5a45kGowvANAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="toolStripButton5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADoSURBVDhPYxgcIHv+44KpO189ANFQIdIASPPW8x//g2gQ
-        v7y8PBuI/5eUlPwvKCj4n52d/T81NfV/QkLC/8jIyP/BwcH/wRphgGIXDDxImfGwoH3DywchXXfI80Lb
-        +ucPlh55+7906SNwIMbExGRHRET8DwwM/O/l5fXf2dn5v42NzX8TE5P/urq6/9XU1FAD0b/jVkHJgkcP
-        XCquDdVAtM2/WBA37fYD69yL5HkBpLl/28v/IBrENzIyytbW1v6voqLyX05O7r+4uPh/ISGh/zw8PP/Z
-        2dn/MzMzowYiyGaKXEA+YGAAAO1odEOUTNnzAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="toolStripButton4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADzSURBVDhPY6AKyJr9SGXR4Xf/oVzSAUgzRQaAALIB5eXl
-        2UD8v6Sk5H9BQcH/7Ozs/6mpqf8TEhL+R0ZG/g8ODka1DOaCRQcpdAXZYO7+t/9n7Xn9P6T3tgpUiHQA
-        0ty75SV5Xghpu63Suek5XHNMTEx2RETE/8DAwP9eXl7/nZ2d/9vY2Pw3MTH5r6ur+19NTQ3Vorb1z/83
-        rnn6v2bV0wEKxPJlj/+XLn38v3jxY/JdANJsUXiF/FgAaYa5wMjIKFtbW/u/iorKfzk5uf/i4uL/hYSE
-        /vPw8PxnZ2f/z8zMjOpSkEYQti263AEVohdgYAAA22181PDz9hkAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="toolStripButton7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAE5SURBVDhP3ZExioNQEIbtbFJoo4WSbKGBFCGFChYJxCgG
-        IdFCC61UiIFICgmC5TtCjuARcgSP4BFyBI8w+wwPYdnEfveDaX7mn5n/PeqfUVVVgqstyxKKoujyPEen
-        0+mRJEkXhmHteR5DWj9zu93Q5XIBXA2RqN4cBAHs9/uWSJ+5Xq8oyzJI03QY4LouwgWGYQCRPnM+n1Ec
-        xxBF0WtAf7Zpmk/btkHX9frVNAbOi7AZfN9/Hg4HtNvtWsuyQNO04aJRcF6EzeA4zmBQFKXG22E+n7ez
-        2Wz8Ifu8x+OxzzsMWK1WDDbDcrkEjuMKIr8HZ0Uk74+TRVGExWIBDMMgIr1nvV6j7Xbbbxu+TBCEQpIk
-        mEwmHU3TX0T+zWazSVRVfWBzI8tyM51O7zzP31mWbbD5Pmr+q1DUN2tnaPb8jDQEAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="toolStripButton6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAC0SURBVDhPYxjmIDs7uyEpKelDQkLC/8jIyA9BQUEHoFLE
-        g7i4uAdAzf/9/f0ToELEg6ioKIPw8PD/Pj4+H6BCpIHg4OAJQGf/d3NzWwAVIg0AbX7g6en538bGJgAq
-        RDzw8vIycHV1/W9tbU2e8x0dHSe4uLj8NzQ0JM/5pqamDywsLP5ramqS7nxzc3MHoAH/NTQ0/kOFiAfG
-        xsYNurq6B9TU1A7IyckdkJCQ2ACVGp6AgQEALvwz/vzQuXIAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="toolStripButton9.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAEJSURBVDhPYxhcoLy8PAGI3wPx/9LS0n6oMBgkJiauj46O
-        /h8SElIAFcIOgBr3l5SU/Idy4SA+Pl4gKCjoPJSLGxQWFu7Py8vDMAAEPD0990OZuEFubu7+jIwMrAY4
-        OjoSNiA1NXU/0L9YDbCwsCBsQEJCwv7IyEisBujq6hI2ICIiYn9gYCBWA1RVVQkb4Ofn1+/t7f3f3t4+
-        ACoEBsrKyg5ycnIoUYsVuLu7K9jY2Lw3Nzc/r6+vrwASA2mWkZE5Ly4uDuYTBEDNCnp6evM1NDT2Kyoq
-        7peSkuoXFRU1gErTGGhra/9XUVH5D/Tvf6CT/wsJCf3n4eH5z87O/p+ZmRlr4A4kYGAAABrmTNdcZz15
-        AAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="toolStripButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAEvSURBVDhP1VFBasMwEMwPqgeESufiyrrVhBDpVEwptm82
-        hdS+5Vb7B+qxN/kH0g/iJ/gH9RP6BP9A1Ro1EBrihJ46MEi72p0dVotzSOu9SOqu9+H1aD56mzWdlfoz
-        86nL4aYjaAaut2b06cvBd3vDS21EZSzLWhum6joXMNUJIFqoAQTuE/Xln+bBd7ravJoB7mGuBSvaHxdi
-        KpgDNPMXzXy4CIp2BAH6KOd/xNkmojCWJmqgsRzgDJ6dQPxuSdRY/FATX3oam1J3NFc95jVzFCGXInyS
-        bBIQjb2N6s6X/gYsDey6JuRTB2AuW3CwjN5OfynPFaGp6oJYjuviuMg5qUhUTQ6Ay2g7Yl4eD3EbRmAV
-        r5z1VXlYIMAJIMjhu5TdOOIQ6AVshuxf+O8FkP0G+o0Q14q53SAAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="toolStripButton8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAEaSURBVDhPrY+hUsQwFEX7CStx9A+IA7eRKyPXbR24zR80
-        jg6mcdQ1bus2DlwjkZG4rVxH/+Dyku0Aw5RpF7gzdzp9fefe1+Q3avcl9660b8daDKP52u9yZSuJ/mjQ
-        e4FhPE/fYa+T+QH1Y55+ha1aQK4X0wH104Fr20E3HaxRBEu4Ionw8vqKD2vjKpuDCKDzgH9FDNFKRnhz
-        u1HD2s8KQAAd2ThANT2yCki5mj59e99yVflTswUyDYiiB79z0wHbh5ZJ7WHpdPNCoOrApQPPLNKVxuUy
-        /zyfrR2CQ3J4D82y8PTfPfQzNRcE0zcmTGwmOIvgh24sktUJDq2CmpjQYNQUnqFxAGXc/39dAH/y6PAc
-        jw7P8ehwtoF3UKtSk81dm2wAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAABDSURBVDhPY6A6MPAo+A/DUCHiAbomkgzBpZhoQygygJAi
+        goZQZABRTgQCnOooNoAUQLEhg8MVIAAyBIahQkMXMDAAAFJqK8IdFOTxAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
